# DZ2_INFA

./: README.md
Вариант2_DWH_Project/: CMakeLists.txt
Вариант2_DWH_Project/data/: customers.csv  products.csv  sales.csv
Вариант2_DWH_Project/include/: Database.h  DateUtils.h  ETLProcessor.h  Models.h
Вариант2_DWH_Project/sql/: analytics.sql  schema.sql
Вариант2_DWH_Project/src/: CSVReader.cpp  Database.cpp  DateUtils.cpp  ETLProcessor.cpp  main.cpp
